crates/sim-citizen-derive/tests/ui/fail/non_citizen_missing_kind.rs
use sim_citizen_derive::non_citizen;

#[non_citizen(reason = "runtime-owned state", descriptor = "example/live-handle")]
struct MissingKind;

fn main() {}
