crates/sim-citizen-derive/tests/ui/fail/non_citizen_missing_kind.stderr
error: missing non_citizen kind
 --> tests/ui/fail/non_citizen_missing_kind.rs:3:1
  |
3 | #[non_citizen(reason = "runtime-owned state", descriptor = "example/live-handle")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `non_citizen` (in Nightly builds, run with -Z macro-backtrace for more info)
